--- a/3 uzd/index.html
+++ b/3 uzd/index.html
@@ -64,9 +64,9 @@
     <section>
       <h2>Forma</h2>
       <form name="forma" action="rezultatas.html" method="post">
-        Vardas: <input type="text" name="vardas" /><br />
-        Slaptažodis: <input type="password" name="slaptazodis" /><br />
-        Pašto adresas: <input type="text" name="email" /><br />
+        Vardas: <input required type="text" name="vardas" /><br />
+        Slaptažodis: <input required type="password" name="slaptazodis" /><br />
+        Pašto adresas: <input required type="text" name="email" /><br />
         <label> <input type="radio" name="lytis" value="V" /> vyras </label>
         <br />
         <label> <input type="radio" name="lytis" value="M" /> moteris </label>
